--- a/stories.html
+++ b/stories.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>COBA TV Stories</title>
+  <title>COBA TV stories</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -80,7 +80,7 @@
 </head>
 <body>
 
-<header>COBA TV Stories</header>
+<header>COBA TV stories</header>
 
 <div class="container">
 
