--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ footer {
     <img src="https://i.postimg.cc/d3NHj8sc/grok-image-90gjci.jpg" alt="COBA TV Banner" />
   </header>  <nav>
     <a href="#">Home</a>
-    <a href="story.html">Stories</a>
+    <a href="story.html">stories</a>
     <a href="#">About</a>
     <a href="mailto:officialcobatv@gmail.com">Contact</a>
   </nav>  <div class="section-title">We Shoot Videos</div>
