--- a/index.html
+++ b/index.html
@@ -1,108 +1,139 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>COBA TV - Home</title>
+  <title>COBA TV - Homepage</title>
   <style>
-    * {
+    body {
       margin: 0;
-      padding: 0;
-      box-sizing: border-box;
       font-family: Arial, sans-serif;
-    }body {
-  background-color: #f4f6fb;
-  color: #222;
-}
-
-header {
-  background-color: #1877f2;
-  color: white;
-  padding: 20px;
-  text-align: center;
-}
-
-header img {
-  width: 100%;
-  max-height: 300px;
-  object-fit: cover;
-  border-bottom: 4px solid #0b5ed7;
-}
-
-nav {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: #ffffff;
-  padding: 10px 0;
-  border-bottom: 1px solid #ccc;
-}
-
-nav a {
-  text-decoration: none;
-  color: #1877f2;
-  font-weight: bold;
-  font-size: 16px;
-}
-
-.section-title {
-  padding: 20px;
-  font-size: 24px;
-  font-weight: bold;
-  color: #333;
-  border-bottom: 2px solid #1877f2;
-  background-color: #e9efff;
-}
-
-.shoot-section {
-  padding: 20px;
-  background-color: #fff;
-  border-bottom: 1px solid #ccc;
-}
-
-.video-section {
-  padding: 20px;
-  background-color: #fdfdfd;
-}
-
-.video-item {
-  background-color: #ffffff;
-  margin-bottom: 15px;
-  padding: 15px;
-  border-radius: 10px;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
-}
-
-footer {
-  margin-top: 30px;
-  padding: 20px;
-  text-align: center;
-  background-color: #e9efff;
-  font-size: 14px;
-}
-
+      background: #f0f2f5;
+      color: #333;
+    }
+    header {
+      background-color: #1d4ed8;
+      color: white;
+      padding: 16px;
+      text-align: center;
+    }
+    .banner {
+      width: 100%;
+      height: auto;
+    }
+    nav {
+      display: flex;
+      justify-content: space-around;
+      background-color: #2563eb;
+      padding: 10px 0;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 8px 16px;
+      background: #1e40af;
+      border-radius: 6px;
+      transition: background 0.3s;
+    }
+    nav a:hover {
+      background: #1d4ed8;
+    }
+    .section {
+      padding: 20px;
+    }
+    .section h2 {
+      margin-bottom: 10px;
+    }
+    .card-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+    }
+    .card {
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      overflow: hidden;
+      transition: transform 0.2s;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+    }
+    .card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+    .card-body {
+      padding: 16px;
+    }
+    .card-body h3 {
+      margin: 0 0 8px;
+    }
+    .card-body p {
+      font-size: 0.9rem;
+      color: #555;
+    }
   </style>
 </head>
 <body>
+
   <header>
-    <img src="https://i.postimg.cc/d3NHj8sc/grok-image-90gjci.jpg" alt="COBA TV Banner" />
-  </header>  <nav>
-    <a href="#">Home</a>
-    <a href="story.html">stories</a>
-    <a href="#">About</a>
-    <a href="mailto:officialcobatv@gmail.com">Contact</a>
-  </nav>  <div class="section-title">We Shoot Videos</div>
-  <div class="shoot-section">
-    <p>COBA TV is dedicated to bringing you exciting fictional and animated stories. Whether it's kids' content or adult storytelling, we deliver engaging video and text content that captivates minds.</p>
-  </div>  <div class="section-title">Videos</div>
-  <div class="video-section">
-    <div class="video-item">
-      <strong>Video 1:</strong> Sample animated story preview (upload your video player here)
+    <h1>Welcome to COBA TV</h1>
+    <p>Fictional & Animated Stories that Spark Imagination</p>
+  </header>
+
+  <img class="banner" src="https://i.postimg.cc/d3NHj8sc/grok-image-90gjci.jpg" alt="COBA TV Banner">
+
+  <nav>
+    <a href="#videos">Videos</a>
+    <a href="#animated">Animated Stories</a>
+    <a href="story.html">Read Stories</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section class="section" id="videos">
+    <h2>Videos</h2>
+    <div class="card-grid">
+      <div class="card">
+        <img src="https://i.postimg.cc/YCV2QBJg/sample-video-thumbnail.jpg" alt="Sample Video">
+        <div class="card-body">
+          <h3>Behind the Scenes</h3>
+          <p>A quick look into how we create magic at COBA TV.</p>
+        </div>
+      </div>
+      <!-- More video cards can go here -->
     </div>
-    <div class="video-item">
-      <strong>Video 2:</strong> Behind the scenes - story creation (upload your video player here)
+  </section>
+
+  <section class="section" id="animated">
+    <h2>Animated Stories</h2>
+    <div class="card-grid">
+      <div class="card">
+        <img src="https://i.postimg.cc/vmHVXRhr/file-00000000ceb0624394ce5b5318dc1762.png" alt="Brave Little Turtle">
+        <div class="card-body">
+          <h3>The Brave Little Turtle</h3>
+          <p>A touching tale about courage in the animal kingdom.</p>
+        </div>
+      </div>
     </div>
-  </div>  <footer>
-    &copy; 2025 COBA TV. All rights reserved. | <a href="https://www.facebook.com/share/16qPiKetMk/" target="_blank">Facebook Page</a>
-  </footer>
+  </section>
+
+  <section class="section" id="about">
+    <h2>About COBA TV</h2>
+    <p>
+      COBA TV is dedicated to delivering powerful fictional and animated stories for all ages.
+      Whether you love uplifting children's tales or intense grown-up fiction, our stories are crafted to entertain and inspire.
+    </p>
+  </section>
+
+  <section class="section" id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: <a href="mailto:officialcobatv@gmail.com">officialcobatv@gmail.com</a></p>
+    <p>Facebook: <a href="https://www.facebook.com/share/16qPiKetMk/" target="_blank">Visit COBA TV on Facebook</a></p>
+  </section>
+
 </body>
-  </html>
+    </html>
