--- a/index.html
+++ b/index.html
@@ -1,139 +1,141 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>COBA TV - Homepage</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>COBA TV - Home</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f0f2f5;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to bottom, #ffffff, #f0f4ff);
       color: #333;
-    }
-    header {
-      background-color: #1d4ed8;
-      color: white;
-      padding: 16px;
-      text-align: center;
-    }
-    .banner {
-      width: 100%;
-      height: auto;
-    }
-    nav {
-      display: flex;
-      justify-content: space-around;
-      background-color: #2563eb;
-      padding: 10px 0;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-      padding: 8px 16px;
-      background: #1e40af;
-      border-radius: 6px;
-      transition: background 0.3s;
-    }
-    nav a:hover {
-      background: #1d4ed8;
-    }
-    .section {
-      padding: 20px;
-    }
-    .section h2 {
-      margin-bottom: 10px;
-    }
-    .card-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 20px;
-    }
-    .card {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      overflow: hidden;
-      transition: transform 0.2s;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-    }
-    .card img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-    }
-    .card-body {
-      padding: 16px;
-    }
-    .card-body h3 {
-      margin: 0 0 8px;
-    }
-    .card-body p {
-      font-size: 0.9rem;
-      color: #555;
-    }
+    }header {
+  background-color: #0050d8;
+  color: white;
+  padding: 1.5rem 1rem;
+  text-align: center;
+}
+
+header h1 {
+  margin: 0;
+  font-size: 2rem;
+}
+
+header p {
+  font-size: 1.1rem;
+  margin-top: 0.5rem;
+}
+
+.banner img {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  display: block;
+}
+
+nav {
+  background-color: #0050d8;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0.5rem 0;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  position: relative;
+  z-index: 10;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  margin: 0.2rem;
+  border-radius: 8px;
+  background-color: #0066ff;
+  font-weight: 500;
+  transition: background 0.3s ease;
+}
+
+nav a:hover {
+  background-color: #004bb5;
+}
+
+section {
+  padding: 1rem;
+}
+
+h2 {
+  color: #0050d8;
+  margin-top: 1rem;
+}
+
+.video-box, .section-box {
+  background-color: #fff;
+  padding: 1rem;
+  border-radius: 12px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  margin-bottom: 1.5rem;
+}
+
+.contact {
+  background-color: #eaf1ff;
+  padding: 1rem;
+  border-left: 5px solid #0050d8;
+  margin-top: 2rem;
+  border-radius: 8px;
+}
+
+footer {
+  text-align: center;
+  padding: 1rem;
+  background-color: #f2f2f2;
+  color: #666;
+  font-size: 0.9rem;
+}
+
+@media (max-width: 600px) {
+  nav {
+    flex-direction: column;
+  }
+  nav a {
+    margin: 0.2rem auto;
+  }
+}
+
   </style>
 </head>
-<body>
-
-  <header>
+<body>  <header>
     <h1>Welcome to COBA TV</h1>
     <p>Fictional & Animated Stories that Spark Imagination</p>
-  </header>
-
-  <img class="banner" src="https://i.postimg.cc/d3NHj8sc/grok-image-90gjci.jpg" alt="COBA TV Banner">
-
-  <nav>
+  </header>  <div class="banner">
+    <img src="https://i.postimg.cc/d3NHj8sc/grok-image-90gjci.jpg" alt="COBA TV Banner">
+  </div>  <nav>
     <a href="#videos">Videos</a>
     <a href="#animated">Animated Stories</a>
     <a href="story.html">Read Stories</a>
     <a href="#about">About</a>
     <a href="#contact">Contact</a>
-  </nav>
-
-  <section class="section" id="videos">
+  </nav>  <section id="videos">
     <h2>Videos</h2>
-    <div class="card-grid">
-      <div class="card">
-        <img src="https://i.postimg.cc/YCV2QBJg/sample-video-thumbnail.jpg" alt="Sample Video">
-        <div class="card-body">
-          <h3>Behind the Scenes</h3>
-          <p>A quick look into how we create magic at COBA TV.</p>
-        </div>
-      </div>
-      <!-- More video cards can go here -->
+    <div class="video-box">
+      <p>Short engaging videos will appear here.</p>
     </div>
-  </section>
-
-  <section class="section" id="animated">
+  </section>  <section id="animated">
     <h2>Animated Stories</h2>
-    <div class="card-grid">
-      <div class="card">
-        <img src="https://i.postimg.cc/vmHVXRhr/file-00000000ceb0624394ce5b5318dc1762.png" alt="Brave Little Turtle">
-        <div class="card-body">
-          <h3>The Brave Little Turtle</h3>
-          <p>A touching tale about courage in the animal kingdom.</p>
-        </div>
-      </div>
+    <div class="section-box">
+      <p>Fun and exciting animated content coming soon.</p>
     </div>
-  </section>
-
-  <section class="section" id="about">
+  </section>  <section id="about">
     <h2>About COBA TV</h2>
-    <p>
-      COBA TV is dedicated to delivering powerful fictional and animated stories for all ages.
-      Whether you love uplifting children's tales or intense grown-up fiction, our stories are crafted to entertain and inspire.
-    </p>
-  </section>
-
-  <section class="section" id="contact">
+    <div class="section-box">
+      <p>COBA TV is a creative platform for storytelling — offering fictional, non-fictional, and animated stories for all ages.</p>
+    </div>
+  </section>  <section id="contact">
     <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:officialcobatv@gmail.com">officialcobatv@gmail.com</a></p>
-    <p>Facebook: <a href="https://www.facebook.com/share/16qPiKetMk/" target="_blank">Visit COBA TV on Facebook</a></p>
-  </section>
-
-</body>
-    </html>
+    <div class="contact">
+      <p>Email us at: <a href="mailto:officialcobatv@gmail.com">officialcobatv@gmail.com</a></p>
+      <p>Facebook: <a href="https://www.facebook.com/share/16qPiKetMk/" target="_blank">COBA TV Facebook</a></p>
+    </div>
+  </section>  <footer>
+    &copy; 2025 COBA TV. All rights reserved.
+  </footer></body>
+  </html>
