--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   </nav>
 
   <div class="banner">
-    <img src="https://i.postimg.cc/8zVPRpJH/coba-banner-wide.png" alt="COBA TV Banner">
+    <img src="https://i.postimg.cc/jjWGz8Mw/banner.png" alt="COBA TV Banner">
   </div>
 
   <div class="top-buttons">
